--- a/mercurystudiodemo/package.json
+++ b/mercurystudiodemo/package.json
@@ -10,8 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "express": "^4.17.1",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-webrtc": "^1.87.1",
+    "socket.io": "^3.0.3",
+    "socket.io-client": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
